-
Bug
-
Resolution: Done
-
P3: Somewhat important
-
5.9.7, 5.10, 5.11, 5.12.0, 5.13.0 Alpha 1
-
None
-
-
0091ec9046c2c4812dee109fcbfb8372d9435461 (qt/qtwebengine/5.12)
The documentation for type property contains a typing error for enum JavaScriptDialogRequest.DialogTypeBeforeUnload.
Current version(s): JavaScriptDialogRequest.DialogTypeUnload
Should be: JavaScriptDialogRequest.DialogTypeBeforeUnload
For Gerrit Dashboard: QTBUG-74070 | ||||||
---|---|---|---|---|---|---|
# | Subject | Branch | Project | Status | CR | V |
254379,2 | Doc: Fix JavaScriptDialogRequest.DialogTypeBeforeUnload enum value | 5.12 | qt/qtwebengine | Status: MERGED | +2 | 0 |