Doc: Fix JavaScriptDialogRequest.DialogTypeBeforeUnload enum value

Fixes: QTBUG-74070
Change-Id: Iad514671a588c0a3e0405dd0141ef54320ae8c86
Reviewed-by: Jüri Valdmann <juri.valdmann@qt.io>